[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemy/enemySprite.png" type="Texture" id=2]
[ext_resource path="res://Particles/DamageParticles/DamageParticles.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
custom_solver_bias = 1.0
radius = 22.0

[sub_resource type="CircleShape2D" id=2]
radius = 225.0

[sub_resource type="CapsuleShape2D" id=3]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="Radius" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 2 )

[node name="MeleeAttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeAttackRange"]
position = Vector2( 0, -30 )
shape = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="DamageParticles" parent="." instance=ExtResource( 3 )]
